<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">"Openin"</string>
    <string name="clicks">Clicks</string>
    <string name="clicks_count">clicks</string>
    <string name="continue_btn">Continue</string>
    <string name="copy">Copy</string>
    <string name="create_new_smart_link">Create New Smartlink</string>
    <string name="create_smartlink">Create Smartlink</string>
    <string name="my_links">My Links</string>
    <string name="faq_title">Frequently Asked Questions</string>
    <string name="todays_clicks">Today’s clicks</string>
    <string name="top_location">Top location</string>
    <string name="top_source">Top source</string>
    <string name="hr_total_clicks">Total clicks</string>
    <string name="total_links">Total links</string>
    <string name="view_all_link">View all Links</string>
    <string name="view_analytics">View Analytics</string>
    <string name="overview">Overview</string>
    <string name="title_my_profile">My Profile</string>
    <string name="talk_with_us">Talk with us</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="courses_title">Courses</string>
    <string name="campaigns_title">Campaigns</string>
    <string name="my_profile_title">My Profile</string>
    <string name="campaigns">Campaigns</string>
    <string name="courses">Courses</string>
    <string name="profile">Profile</string>
</resources>
