<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/white_rounded_border">

    <data>
        <variable
            name="viewModel"
            type="com.innovativetools.assignment.viewmodel.DashboardViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="25dp">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/scroll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/scroll" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:scrollbars="none"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="140dp">

                <TextView
                    android:id="@+id/tvGreeting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:textAlignment="center"
                    android:text="@{viewModel.greeting}"
                    android:textColor="@color/fade_black"
                    android:textSize="18sp"
                    />

                <LinearLayout
                    android:id="@+id/ll_UserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/tvGreeting"
                    >

                    <TextView
                        android:id="@+id/tvUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/black"
                        android:text="@{viewModel.userName}"
                        android:textSize="24sp" />

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="8dp"
                        android:src="@drawable/ic_hand_emoji" />
                </LinearLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_chart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/ll_UserName"
                    tools:ignore="MissingConstraints">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom">

                            <TextView
                                android:id="@+id/tv_chart_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_centerVertical="true"
                                android:calendarTextColor="@color/red"
                                android:text="@string/overview"
                                android:textColor="@color/black_50"
                                android:textSize="18sp" />


                            <TextView
                                android:id="@+id/dateTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_centerVertical="true"
                                android:layout_marginEnd="5dp"
                                android:background="@drawable/date_bg"
                                android:calendarTextColor="@color/red"
                                android:textColor="@color/black"
                                android:textSize="11sp" />

                        </RelativeLayout>

                        <com.github.mikephil.charting.charts.LineChart
                            android:id="@+id/chart"
                            android:layout_width="match_parent"
                            android:layout_height="200dp" />

                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/layout_chart"
                    tools:ignore="MissingConstraints">

                    <LinearLayout
                        android:id="@+id/ll_noLinks"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/card_baground"
                        android:orientation="vertical"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:visibility="gone"
                        tools:ignore="MissingConstraints">

                        <ImageView
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_create_link"
                            tools:ignore="MissingConstraints" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="15dp"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:text="@string/create_smartlink"
                            android:textColor="@color/primary"
                            android:textSize="16sp" />
                    </LinearLayout>


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_clicks_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        tools:ignore="MissingConstraints" />

                    <LinearLayout
                        android:id="@+id/ll_view_analytics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/empty_bg"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/rv_clicks_info">

                        <ImageView
                            android:layout_width="19dp"
                            android:layout_height="19dp"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@drawable/ic_growth"
                            app:tint="@color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="15dp"
                            android:gravity="center_vertical"
                            android:textStyle="bold"
                            android:text="@string/view_analytics"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </LinearLayout>


                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_links_action"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        app:layout_constraintTop_toBottomOf="@+id/ll_view_analytics">

                        <com.google.android.material.tabs.TabLayout
                            android:id="@+id/tabLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/grey_status_bar"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:tabGravity="start"
                            app:tabMode="fixed"
                            app:tabSelectedTextColor="@color/white"
                            app:tabTextAppearance="@style/TabTextAppearance"
                            app:tabTextColor="@color/fade_black" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <ListView
                        android:id="@+id/listViewLinks"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:foregroundGravity="top"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/cl_links_action" />

                    <LinearLayout
                        android:id="@+id/ll_view_all_links"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/empty_bg"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toBottomOf="@+id/listViewLinks">

                        <ImageView
                            android:layout_width="19dp"
                            android:layout_height="19dp"
                            android:layout_gravity="center_vertical"
                            app:srcCompat="@drawable/ic_link"
                            app:tint="@color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="15dp"
                            android:gravity="center_vertical"
                            android:text="@string/view_all_link"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/ll_talk_with_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/whatsapp_bg"
                    android:foreground="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/layout_header">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        app:srcCompat="@drawable/ic_whatsapp"
                        app:tint="@color/growth_green" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="12dp"
                        android:gravity="center_vertical"
                        android:text="@string/talk_with_us"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_faq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/fill_faq_bg_round_8_corner"
                    android:foreground="?attr/selectableItemBackground"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/ll_talk_with_us">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        app:srcCompat="@drawable/ic_questionmark"
                        app:tint="@color/primary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="12dp"
                        android:gravity="center_vertical"
                        android:text="@string/faq_title"
                        android:textColor="@color/black"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
